# notion-anki-sync

./: .dockerignore  .env.example  Dockerfile  Makefile  README.md  anki_addon_page.html  pyproject.toml  setup.cfg
.github/workflows/: build-plugin.yml  lint.yml  lint_and_test.yml
notion_anki_sync/: __init__.py  clients.py  config.py  exceptions.py  model.css  parser.py  sync.py
notion_anki_sync/models/: __init__.py  anki.py  notion.py
notion_sync_addon/: __init__.py  config.json  config.md  helpers.py  log.txt  meta.json  model.css  notes_manager.py  notion_client.py  parser.py
notion_sync_addon/schemas/: config_schema.json
tests/: test_note_data_extractor.py
tests/data/: note.html  note_with_cloze.html  note_with_mark.html
