[tool.black]
line-length = 79
skip-string-normalization = true
target-version = ["py38"]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
default_section = "THIRDPARTY"
known_first_party = "notion_anki_sync,tests"

[tool.poetry]
name = "notion-anki-sync"
version = "0.9.7"
description = "Anki addon that loads toggle lists from Notion as notes to a specified deck."
repository = "https://github.com/9dogs/notion-anki-sync"
homepage = "https://github.com/9dogs/notion-anki-sync"
authors = ["Mikhail Knyazev <hellishbot@gmail.com>"]
license = "GPL-3.0-only"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
aqt = "^2.1.40"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.7.0"
mypy = "^0.800"
flake8 = "^3.8.4"
pydocstyle = "^5.1.1"
pytest = "^6.2.2"
pytest-cov = "^2.11.1"
PyQt5-stubs = "^5.14.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
sync = "notion_anki_sync.sync:main"
