[tool.poetry]
name = "notion-anki-sync"
version = "0.9.15"
description = "Anki addon that loads toggle lists from Notion as notes to a specified deck."
repository = "https://github.com/9dogs/notion-anki-sync"
homepage = "https://github.com/9dogs/notion-anki-sync"
authors = ["Mikhail Knyazev <hellishbot@gmail.com>"]
license = "GPL-3.0-only"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
aqt = {extras = ["qt6"], version = "^2.1.61"}

[tool.poetry.dev-dependencies]
black = "^23.3.0"
isort = "^5.7.0"
mypy = "^1.2.0"
flake8 = "^6.0.0"
pydocstyle = "^6.1.1"
pytest = "^7.1.2"
pytest-cov = "^4.0.0"
darglint = "^1.8.0"
types-requests = "^2.25.11"

[tool.black]
line-length = 79
skip-string-normalization = true
target-version = ["py39"]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
default_section = "THIRDPARTY"
known_first_party = "notion_anki_sync,tests"

[tool.mypy]
sqlite_cache = true
ignore_missing_imports = true
check_untyped_defs = true
show_error_codes = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
strict_equality = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
sync = "notion_anki_sync.sync:main"

